test/expected/typedef_c_int_least32_t.out
typedef char int_least32_t
             ^
14: error: "int_least32_t": "typedef" redefinition with different type; original is: typedef int int_least32_t
